# cosmo-pager-radio-demo

./: .gitignore  CLAUDE.md  README.md  TODO.md  cosmo-pager-radio.code-workspace  sdkconfig.defaults
docs/: temp.md
docs/design/: hardware-architecture.md
docs/firmware/: usb-hid.md
docs/hardware/: nfc.md  otg-adapter.md  usb.md
docs/legacy/E5Ultra/: README.md
docs/project/: CosmoRadio-V4-BOM及报价分析.md  CosmoRadio-V4-PCB-Spec.md
docs/references/: adafruit-huzzah32.md  esp-idf-bluetooth-hid.md
firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
firmware/docs/: ESP32S3 BLE HID 与 Android 稳定一对一连接最佳实践调研报告.md
firmware/main/: CMakeLists.txt  Kconfig.projbuild  device_identity.c  device_identity.h  esp_hid_device_main.c  esp_hid_gap.c  esp_hid_gap.h  idf_component.yml  input_handler.c  led_indicator.c  led_indicator.h
main/: CMakeLists.txt  idf_component.yml  input_handler.c  input_handler.h  led_indicator.c  nfc_handler.c  nfc_handler.h  tusb_hid_example_main.c
pcb/: README.md
pcb/cosmoradio-v4-carrier/: .gitignore
pcb/cosmoradio-v4-carrier/CosmoradioV4Carrier/: CosmoradioV4Carrier.kicad_pcb  CosmoradioV4Carrier.kicad_pro  CosmoradioV4Carrier.kicad_sch  CosmoradioV4Carrier.net
pcb/cosmoradio-v4-carrier/output/: cosmoradio-v4-carrier_bom.csv
pcb/cosmoradio-v4-carrier/scripts/: build_pcb.py  patch_netlist.py
pcb/cosmoradio-v4-carrier/src/: circuit.py
pcb/research/: Tab_A9_OTG_Charging_Feasibility_Report.md
test/: hid-test.html
tusb_hid/: README.md  sdkconfig.defaults
